--- a/20220925uemura/HTML-ploblem1.html
+++ b/20220925uemura/HTML-ploblem1.html
@@ -10,9 +10,7 @@
 
 <body>
 
-  <h1>
-    <p>株式会社TECH</p>
-  </h1>
+  <h1>株式会社TECH</h1>
 
   <ul>
     <li> <a href="リンク先">ホーム</a> </li>
@@ -22,15 +20,12 @@
     <li> <a href="リンク先">お問い合わせ</a> </li>
   </ul>
 
-  <img src="img/mv.png" width="1500" height="900">
+  <img src="img/mv.png" alt="データがありません" width="1500" height="900">
 
   <p>最新のテクノロジーで<em>社会課題</em>を解決</p>
 
   <section>
-    <h1>
-      <p>会社概要</p>
-    </h1>
-
+    <h2>会社概要</h2>
     <table>
       <tr>
         <th>会社名</th>
@@ -65,28 +60,26 @@
   </section>
 
   <section>
-    <h1>
-      <p>お問い合わせ</p>
-    </h1>
+    <h3>お問い合わせ</h3>
 
     <form action="送信先" method="get">
-      <label>会社名
-        <input type="text">
+      <label for="会社名">会社名
+        <input type="text" name="お問い合わせ" id="会社名">
       </label><br>
 
-      <label>お名前
-        <input type="text">
+      <label for="お名前">お名前
+        <input type="text" name="お問い合わせ" id="お名前">
       </label><br>
 
-      <label>メールアドレス
-        <input type="email">
+      <label for="メールアドレス">メールアドレス
+        <input type="email" name="お問い合わせ" id="メールアドレス">
       </label><br>
 
-      <label>お問い合わせ内容
-        <textarea name="test1" cols="60" rows="10"></textarea>
+      <label for="テキストエリア">お問い合わせ内容
+        <textarea name="お問い合わせ" cols="60" rows="10"></textarea>
       </label><br>
 
-      <input type="submit" value="お申し込み">
+      <input type="submit" name="お問い合わせ" value="お申し込み">
     </form><br>
 
     <small>&copy;2020 TECH inc.</small>
